WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184978
WebLoaderStrategy::networkMetricsFromResourceLoadIdentifier should use DoNotProcessIncomingMessagesWhenWaitingForSyncReply
https://bugs.webkit.org/show_bug.cgi?id=184978
Summary
WebLoaderStrategy::networkMetricsFromResourceLoadIdentifier should use DoNotP...
youenn fablet
Reported
2018-04-25 10:35:28 PDT
Otherwise we end up in a crash like: Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BREAKPOINT (SIGTRAP) Exception Codes: 0x0000000000000002, 0x0000000000000000 Exception Note: EXC_CORPSE_NOTIFY Termination Signal: Trace/BPT trap: 5 Termination Reason: Namespace SIGNAL, Code 0x5 Terminating Process: exc handler [0] Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x000000010e59dbe2 WebKit::WebLoaderStrategy::isDoingLoadingSecurityChecks() const + 0 1 ??? 000000000000000000 0 + 0 2 com.apple.WebKit 0x000000010e59da7d WebKit::WebLoaderStrategy::networkMetricsFromResourceLoadIdentifier(unsigned long long) + 71 3 com.apple.WebCore 0x000000010ffc6f2c WTF::Function<void ()>::CallableWrapper<WebCore::InspectorNetworkAgent::didFinishLoading(unsigned long, WebCore::DocumentLoader*, WebCore::NetworkLoadMetrics const&, WebCore::ResourceLoader*)::$_4>::call() + 76 4 com.apple.WebCore 0x000000010ffb89f9 WebCore::InspectorNetworkAgent::didFinishLoading(unsigned long, WebCore::DocumentLoader*, WebCore::NetworkLoadMetrics const&, WebCore::ResourceLoader*) + 1193 5 com.apple.WebCore 0x000000010f15c4b6 WebCore::ResourceLoadNotifier::sendRemainingDelegateMessages(WebCore::DocumentLoader*, unsigned long, WebCore::ResourceRequest const&, WebCore::ResourceResponse const&, char const*, int, int, WebCore::ResourceError const&) + 1078 6 com.apple.WebCore 0x000000010fff07c3 WebCore::FrameLoader::loadedResourceFromMemoryCache(WebCore::CachedResource&, WebCore::ResourceRequest&, WebCore::ResourceError&) + 515 7 com.apple.WebCore 0x000000011004183d WebCore::CachedResourceLoader::shouldContinueAfterNotifyingLoadedFromMemoryCache(WebCore::CachedResourceRequest const&, WebCore::CachedResource&, WebCore::ResourceError&) + 253 8 com.apple.WebCore 0x000000011003ed2d WebCore::CachedResourceLoader::requestResource(WebCore::CachedResource::Type, WebCore::CachedResourceRequest&&, 
Attachments
Patch
(3.10 KB, patch)
2018-04-25 10:52 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-04-25 10:35:42 PDT
<
rdar://problem/39667094
>
youenn fablet
Comment 2
2018-04-25 10:52:32 PDT
Created
attachment 338755
[details]
Patch
WebKit Commit Bot
Comment 3
2018-04-25 15:27:55 PDT
Comment on
attachment 338755
[details]
Patch Clearing flags on attachment: 338755 Committed
r231026
: <
https://trac.webkit.org/changeset/231026
>
WebKit Commit Bot
Comment 4
2018-04-25 15:27:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug