WebLoaderStrategy::networkMetricsFromResourceLoadIdentifier should use DoNotProcessIncomingMessagesWhenWaitingForSyncReply https://bugs.webkit.org/show_bug.cgi?id=184978 <rdar://problem/39667094>

Reviewed by Simon Fraser.

Use DoNotProcessIncomingMessagesWhenWaitingForSyncReply to keep a consistent state after the sync IPC call.

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::responseFromResourceLoadIdentifier):
(WebKit::WebLoaderStrategy::networkMetricsFromResourceLoadIdentifier):


Canonical link: https://commits.webkit.org/200496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231026 268f45cc-cd09-0410-ab3c-d52691b4dbfc